syntax = "proto3";
package options;

option go_package = "framework/pkg/table/demo/tables/options;options";

import "pkg/proto/extension/enum.proto";

enum TestOption {
  O1 = 0 [ (extension.option_name) = "-" ];
  O2 = 1 [ (extension.option_name) = "选项AAA" ];
  O3 = 2 [ (extension.option_name) = "选项BBB" ];
  O4 = 3 [ (extension.option_name) = "选项CCC" ];
}